Switch input type date to react-datepicker

--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,9 @@ html {
 #home .custom-shape-divider-bottom-1714584326 .shape-fill {
   fill: #ebf0fa;
 }
+
+.react-datepicker__input-container svg {
+  position: absolute;
+  right: 16px;
+  top: 25px;
+}
