--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,11 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  padding: 0 !important;
+  overflow: visible !important;
+}
+
 .custom-shape-divider-bottom-1714584326 {
   position: absolute;
   bottom: 0;
