--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,9 @@ html {
   mask: linear-gradient(#0000 0 0) content-box intersect,
     conic-gradient(#000 180deg, #0000 0);
 }
+
+.bungee-regular {
+  font-family: "Bungee", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
