--- a/src/index.css
+++ b/src/index.css
@@ -163,4 +163,25 @@ body {
 	.react-datepicker__input-container svg {
 		top: 20px;
 	}
+	.swiper {
+		width: 95% !important;
+	}
+}
+
+.swiper {
+	width: 100%;
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+.swiper-slide {
+	background-position: center;
+	background-size: cover;
+	width: 85% !important;
+	height: 85% !important;
+}
+
+.swiper-slide img {
+	display: block;
+	width: 100%;
 }
